# AI-30

./: .gitignore  README.md  sd_notes.md
Week1/: .gitignore  README.md  api.py  day3_rag.py  day4_rag.py  day5_notes.md  day6_notes.md  day7_notes.md  ground_truth.md  pyproject.toml  rag_pipeline.py  requirements.txt
Week1-DS/: ds_day1.py  ds_notes.md  main.py  pyproject.toml
Week1/Day1/: .gitignore  day2_notes.md  day2_rag.py  main.py  notes.md  pyproject.toml
Week1/Week1/: api.py  day2_notes.md  day3_notes.md  day4_notes.md  day5_notes.md  notesday1.md
Week2/: .gitignore  day10_rag.py  day11_rag.py  day12_rag.py  day13_agent.py  day14_agent.py  day8_rag.py  day9_rag.py  notes.md  pyproject.toml
Week3/: day15_agent.py  day16_agent.py  notes.md  numbers.txt  pyproject.toml
